# tritonml-framework

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: DESIGN_TRADEOFFS.md  MODEL_COMPRESSION.md  README.md  TEST_STRATEGY.md  TRITON_SETUP.md  TRITON_SETUP_DOCKER.md  _config.yml  api.html  index.html
docs/assets/css/: api.css  style.css
docs/assets/js/: main.js
examples/: benchmarking.py  custom_model.py  emotion_classifier_framework.py  huggingface_benchmark.py  quick_start.py
tests/: __init__.py  test_benchmarks.py  test_text_classification.py  test_tritonml_core.py
tritonml/: __init__.py
tritonml/benchmarks/: __init__.py  dataset_loader.py  runner.py
tritonml/cli/: __init__.py  main.py
tritonml/core/: __init__.py  client.py  config.py  converter.py  model.py
tritonml/deploy/: __init__.py  docker.py
tritonml/tasks/: __init__.py  image_classification.py  registry.py  text_classification.py
tritonml/tasks/converters/: __init__.py  huggingface_onnx.py
tritonml/utils/: __init__.py  deploy.py
